# ScrappyTechLab01

./: LICENSE.txt  README.md
light-communication/: CMakeLists.txt  light_communication.c
monitor-ambient-lighting/: CMakeLists.txt  README.md  image_processing.py  monitor_ambient_lighting.cpp  monitor_capture_companion.py  requirements.txt
push-button-switch/: CMakeLists.txt  pinconstants.h  push_button_switch.c
smart-coaster/: CMakeLists.txt  smart_coaster.c
smart-water-bottle/: CMakeLists.txt  capacitance_based.cpp
